--- a/components/org.wso2.carbon.identity.application.authenticator.openid/pom.xml
+++ b/components/org.wso2.carbon.identity.application.authenticator.openid/pom.xml
@@ -64,6 +64,11 @@
             <groupId>org.wso2.carbon.identity.framework</groupId>
             <artifactId>org.wso2.carbon.identity.application.common</artifactId>
         </dependency>
+    <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr.ds-annotations</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
